@@ -137,6 +137,7 @@ o - New program printass to print entries in users/cdb, users/assign file
 76. qmail.h: Added compile time definitions for DEATH, OSSIFIED
 77. svctool: added --death argument to configure max time in secs that
     qmail-queue can run
+78. svctool: create DEATH, OSSIFIED variables as global variables
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
